--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente desarrollo
-configuracion.autor.nombre=Nicolas
-configuracion.autor.email=nicolassjt@gmail.com
+configuracion.texto=Configurando ambiente desarrollo ...
+configuracion.autor.nombre=John Doe
+configuracion.autor.email=john@gmail.com
